# WindowsAIRewrite

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  sync_remote.py  vcpkg.json
docs/qa/: manual-qa.md
include/: App.h  AppError.h  ClipboardManager.h  CredentialStore.h  HotkeyManager.h  OpenAIClient.h  PreviewWindow.h  RewriteController.h  SafeLog.h  SettingsStore.h  SettingsWindow.h  TextCaptureService.h  TrayIcon.h  UiControlIds.h  UserMessages.h  Win32UiTheme.h  Win32WindowActivation.h
installer/: windows-ai-rewrite.iss
resources/: WindowsAIRewrite.manifest  WindowsAIRewrite.rc
src/: App.cpp  AppError.cpp  ClipboardManager.cpp  CredentialStore.cpp  HotkeyManager.cpp  OpenAIClient.cpp  PreviewWindow.cpp  RewriteController.cpp  SafeLog.cpp  SettingsStore.cpp  SettingsWindow.cpp  TextCaptureService.cpp  TrayIcon.cpp  UserMessages.cpp  main.cpp
